@@ -82,12 +82,12 @@ push_message_buffer_length [ number ]
   push_max_message_buffer_length and push_min_message_buffer_length to this 
   value.
   
-push_min_message_recipients [ number ]
-  default: 0
+push_delete_oldest_received_message [ on | off ]
+  default: off
   context: http, server, location
-  The number of times a message must be received before it is considered for 
-  deletion. Useful to guarantee message delivery. (This does NOT override the
-  push_max_message_buffer_length setting).
+  When enabled, as soon as the oldest message in a channel's message queue has
+  been received by a subscriber, it is deleted. Recommend avoiding this 
+  directive as it violates subscribers' assumptions of GET request idempotence.
 
 push_message_timeout [ time ]
   default: 1h
