@@ -58,13 +58,11 @@ typedef struct {
 	ngx_int_t                       subscriber_poll_mechanism;
 	ngx_int_t                       authorize_channel;
 	ngx_int_t                       store_messages;
-	ngx_int_t                       min_message_recipients;
+	ngx_int_t                       delete_oldest_received_message;
 	ngx_str_t                       channel_group;
 	ngx_int_t                       max_channel_id_length;
 	ngx_int_t                       max_channel_subscribers;
 } ngx_http_push_loc_conf_t;
-
-#define NGX_INFINITE_MESSAGE_RECIPIENTS         (2^31)-1
 
 //message queue
 typedef struct {
@@ -73,7 +71,7 @@ typedef struct {
 //	ngx_str_t                       charset;
 	ngx_buf_t                      *buf;
 	time_t                          expires;
-	ngx_int_t                       recipients_left; //# of times message is received before it should be deleted.
+	ngx_int_t                       delete_oldest_received;
 	time_t                          message_time; //tag message by time
 	ngx_int_t                       message_tag;  //used in conjunction with message_time if more than one message have the same time.
 	ngx_int_t                       refcount;
