@@ -102,7 +102,7 @@ static void *		ngx_http_push_create_loc_conf(ngx_conf_t *cf) {
 	lcf->subscriber_poll_mechanism=NGX_CONF_UNSET;
 	lcf->authorize_channel=NGX_CONF_UNSET;
 	lcf->store_messages=NGX_CONF_UNSET;
-	lcf->min_message_recipients=NGX_CONF_UNSET;
+	lcf->delete_oldest_received_message=NGX_CONF_UNSET;
 	lcf->max_channel_id_length=NGX_CONF_UNSET;
 	lcf->max_channel_subscribers=NGX_CONF_UNSET;
 	lcf->channel_group.data=NULL;
@@ -118,7 +118,7 @@ static char *	ngx_http_push_merge_loc_conf(ngx_conf_t *cf, void *parent, void *c
 	ngx_conf_merge_value(conf->subscriber_poll_mechanism, prev->subscriber_poll_mechanism, NGX_HTTP_PUSH_MECHANISM_LONGPOLL);
 	ngx_conf_merge_value(conf->authorize_channel, prev->authorize_channel, 0);
 	ngx_conf_merge_value(conf->store_messages, prev->store_messages, 1);
-	ngx_conf_merge_value(conf->min_message_recipients, prev->min_message_recipients, NGX_HTTP_PUSH_MIN_MESSAGE_RECIPIENTS);
+	ngx_conf_merge_value(conf->delete_oldest_received_message, prev->delete_oldest_received_message, 0);
 	ngx_conf_merge_value(conf->max_channel_id_length, prev->max_channel_id_length, NGX_HTTP_PUSH_MAX_CHANNEL_ID_LENGTH);
 	ngx_conf_merge_value(conf->max_channel_subscribers, prev->max_channel_subscribers, 0);
 	ngx_conf_merge_str_value(conf->channel_group, prev->channel_group, "");
@@ -286,11 +286,11 @@ static ngx_command_t  ngx_http_push_commands[] = {
       0,
       NULL },
 	  
-	{ ngx_string("push_min_message_recipients"),
+	{ ngx_string("push_delete_oldest_received_message"),
       NGX_HTTP_MAIN_CONF|NGX_HTTP_SRV_CONF|NGX_HTTP_LOC_CONF|NGX_CONF_TAKE1,
-      ngx_conf_set_num_slot,
+      ngx_conf_set_flag_slot,
       NGX_HTTP_LOC_CONF_OFFSET,
-      offsetof(ngx_http_push_loc_conf_t, min_message_recipients),
+      offsetof(ngx_http_push_loc_conf_t, delete_oldest_received_message),
       NULL },
 
 	{ ngx_string("push_publisher"),
