@@ -1,3 +1,4 @@
+ change: removed push_min_message_recipients, added push_delete_oldest_received_message
 0.69 (Nov. 17 2009)
  fix: publisher got a 201 Created response even if the channel had no subscribers at the time (should be 202 Accepted)
  fix: small memory leak after each message broadcast to a channel
